[package]
name = "dN-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-multipart = "0.6"
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["multipart", "json"] }
bytes = "1.5"